fix: update Dockerfiles to use npm install instead of npm ci

--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -6,13 +6,16 @@ FROM base AS deps
 RUN apk add --no-cache libc6-compat
 WORKDIR /app
 COPY package*.json ./
-RUN npm ci && npm cache clean --force
+RUN npm install && npm cache clean --force
 
 # Build the source code
 FROM base AS builder
 WORKDIR /app
 COPY --from=deps /app/node_modules ./node_modules
 COPY . .
+
+# Ensure public folder exists (may not exist in source)
+RUN mkdir -p ./public
 
 # Set build-time environment variables
 ARG NEXT_PUBLIC_API_URL
